# python-backtesting

./: .gitignore  README.md  pyproject.toml
data/: ADAUSDT_1_2023-01-01_2023-01-31.csv  ADAUSDT_1_2023-02-01_2023-02-28.csv  ADAUSDT_1_2023-03-01_2023-03-31.csv  ADAUSDT_1_2023-04-01_2023-04-30.csv  ADAUSDT_1_2023-05-01_2023-05-31.csv  ADAUSDT_5_2023-01-01_2023-01-31.csv  ADAUSDT_5_2023-02-01_2023-02-28.csv  ADAUSDT_5_2023-03-01_2023-03-31.csv  ADAUSDT_5_2023-04-01_2023-04-30.csv  ADAUSDT_5_2023-05-01_2023-05-31.csv  ATOMUSDT_1_2023-01-01_2023-01-31.csv  ATOMUSDT_1_2023-02-01_2023-02-28.csv  ATOMUSDT_1_2023-03-01_2023-03-31.csv  ATOMUSDT_1_2023-04-01_2023-04-30.csv  ATOMUSDT_1_2023-05-01_2023-05-31.csv  ATOMUSDT_5_2023-01-01_2023-01-31.csv  ATOMUSDT_5_2023-02-01_2023-02-28.csv  ATOMUSDT_5_2023-03-01_2023-03-31.csv  ATOMUSDT_5_2023-04-01_2023-04-30.csv  ATOMUSDT_5_2023-05-01_2023-05-31.csv  AVAXUSDT_1_2023-01-01_2023-01-31.csv  AVAXUSDT_1_2023-02-01_2023-02-28.csv  AVAXUSDT_1_2023-03-01_2023-03-31.csv  AVAXUSDT_1_2023-04-01_2023-04-30.csv  AVAXUSDT_1_2023-05-01_2023-05-31.csv  AVAXUSDT_5_2023-01-01_2023-01-31.csv  AVAXUSDT_5_2023-02-01_2023-02-28.csv  AVAXUSDT_5_2023-03-01_2023-03-31.csv  AVAXUSDT_5_2023-04-01_2023-04-30.csv  AVAXUSDT_5_2023-05-01_2023-05-31.csv  AXSUSDT_5_2023-01-01_2023-01-31.csv  AXSUSDT_5_2023-02-01_2023-02-28.csv  AXSUSDT_5_2023-03-01_2023-03-31.csv  AXSUSDT_5_2023-04-01_2023-04-30.csv  AXSUSDT_5_2023-05-01_2023-05-31.csv  BITUSDT_5_2023-01-01_2023-01-31.csv  BITUSDT_5_2023-02-01_2023-02-28.csv  BITUSDT_5_2023-03-01_2023-03-31.csv  (+117 more)
(+16 files in other folders)
